--- a/_posts/2023-02-28-hello.md
+++ b/_posts/2023-02-28-hello.md
@@ -11,5 +11,5 @@ Here's a list of things you should probably do after installing this theme:
 
 * Edit `_config.yml` with your actual information. Classic Jekyll.
 * Edit `about.md` with your actual information
-* Go to `css/main.scss` and edit `brand-color` to any color you want to change the header color! If you want to use an image instead, check out `_sass/_layout.scss` and edit line 6. 
-* Delete these icky filler posts.
+* Go to `css/main.scss` and edit `brand-color` to any color you want to change the header color!
+* Delete these filler posts and add some new ones!
